@@ -1,7 +1,7 @@
 github_url = "https://github.com/PyCQA/pylint"
 
 [version]
-current = "2.9.4-dev0"
+current = "2.9.4"
 regex = '''
 ^(?P<major>0|[1-9]\d*)
 \.
