@@ -12,9 +12,15 @@ Release date: TBA
 * Added ``time.clock`` to deprecated functions/methods for python 3.3
 
 
-What's New in Pylint 2.9.4?
+What's New in Pylint 2.9.5?
 ===========================
 Release date: TBA
+
+
+
+What's New in Pylint 2.9.4?
+===========================
+Release date: 2021-07-20
 
 ..
   Put bug fixes that should not wait for a new minor version here
